[package]
edition = "2021"
name    = "lnsploit"
version = "0.1.0"

[dependencies]
lightning = { version = "0.0.110", features = ["max_level_trace"] }

bip32 = "0.4.0"
bitcoin = "0.28.1"

anyhow    = "1.0.64"
chrono = "0.4.22"
crossterm = "0.25.0"
tokio     = { version = "1.21.0", features = ["rt-multi-thread", "macros", "time", "sync"] }
tui       = "0.19.0"
async-trait = "0.1.57"
futures = "0.3.24"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
diesel = { version = "2.0", features = ["sqlite", "r2d2"] }
diesel_migrations = "2.0.0"
uuid = { version = "1.1.2", features = ["v4"] }
rand_core = { version = "0.6", features = ["std"] }
